namespace java com.moseeker.thrift.gen.dao.struct.hrdb
namespace py thrift_gen.gen.dao.struct.hrdb


struct HrCompanyAccountDO {

	1: optional i32 companyId,	//hr_company.id
	2: optional i32 accountId	//user_hr_account.id

}
